--- a/searchPage.html
+++ b/searchPage.html
@@ -19,13 +19,17 @@
 <body>
 
     <header class="head"> 
-
     </header>
 
     <main class="container">
 
       <section>
         <button class="random-beer">Button</button>
+
+        <div>Search bar</div>
+        <input class="search-beer-input" placeholder="Beer search">
+        <div class="search-bar"></div>
+
       </section>
         
     </main>
