Input in header

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
   <div class="wrapper">
     <header class="head"> 
-
+      <input class="search-beer-input">
     </header>
 
     <main class="container">
