--- a/index.html
+++ b/index.html
@@ -11,24 +11,43 @@
     <meta name="author" content="Oscar Lysgren">
     <meta name="Description" content="JavaScript">
     <meta charset="UTF-8">
-
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 
 </head>
 
 <body>
-
+  <div class="wrapper">
     <header class="head"> 
 
     </header>
 
     <main class="container">
-
-      <section>
-        <button class="random-beer">Button</button>
-      </section>
-        
+      <div class="card">
+        <div class="card-header">
+          <img class="beer-img"  src="" alt="">
+        </div>
+        <div class="card-body">
+          <h1 class="beer-name">bear</h1>
+          <button class="random-beer">See more > </button>
+        </div>
+      </div>   
     </main>
+    <footer class="beer-info">
+      <img class="beer-img" src="" alt="">
+      <p class="beer-name"></p>
+      <p class="description"></p>
+      <p class="alcohol by volume"></p>
+      <p class="volume"></p>
+      <p class="ingredients"></p>
+      <p class="hops"></p>
+      <p class="food pairing"></p>
+      <p class="brewers tips"></p>
+
+    </footer>
+  </div>
+
+    
 
 <script type="text/javascript" src="mainScript.js"></script>
 
