--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
     </header>
 
     <main class="container">
+      <div class="margin">
+
+       <div class="card-wrapper">
+
       <div class="card">
         <div class="card-header">
           <img class="beer-img"  src="" alt="">
@@ -30,9 +34,15 @@
         <div class="card-body">
           <h1 class="beer-name">bear</h1>
           <button class="random-beer">See more > </button>
-        </div>
-      </div>   
+      </div>
+
+      </div>
+    </div> 
+
+      </div>
+
     </main>
+
     <footer class="beer-info">
       <img class="beer-img" src="" alt="">
       <p class="beer-name"></p>
