--- a/searchPage.html
+++ b/searchPage.html
@@ -11,28 +11,52 @@
     <meta name="author" content="Oscar Lysgren">
     <meta name="Description" content="JavaScript">
     <meta charset="UTF-8">
-
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 
 </head>
 
 <body>
-
+  <div class="wrapper">
     <header class="head"> 
     </header>
 
     <main class="container">
+      <div class="margin">
 
-      <section>
-        <button class="random-beer">Button</button>
+       <div class="card-wrapper">
 
-        <div>Search bar</div>
-        <input class="search-beer-input" placeholder="Beer search">
-        <div class="search-bar"></div>
+      <div class="card">
+        <div class="card-header">
+          <img class="beer-img"  src="" alt="">
+        </div>
+        <div class="card-body">
+          <h1 class="beer-name">bear</h1>
+          <button class="random-beer">See more > </button>
+      </div>
 
-      </section>
-        
+      </div>
+    </div> 
+
+      </div>
+
     </main>
+
+    <footer class="beer-info">
+      <img class="beer-img-info" src="" alt="">
+      <p class="beer-name-info"></p>
+      <p class="description"></p>
+      <p class="alcohol-by-volume"></p>
+      <p class="volume"></p>
+      <p class="ingredients"></p>
+      <p class="hops"></p>
+      <p class="food-pairing"></p>
+      <p class="brewers-tips"></p>
+      <input class="search-beer-input">
+    </footer>
+  </div>
+
+    
 
 <script type="text/javascript" src="mainScript.js"></script>
 
