--- a/searchPage.html
+++ b/searchPage.html
@@ -28,7 +28,7 @@
 
       <div class="card">
         <div class="card-header">
-          <img class="beer-img"  src="" alt="">
+          <img class="beer-img"  src="/img/beerBottle.jpg" alt="">
         </div>
         <div class="card-body">
           <h1 class="beer-name">bear</h1>
@@ -56,7 +56,18 @@
     </footer>
   </div>
 
-    
+  <ul class="beer-list">
+    <li>Beer 1</li>
+    <li>Beer 2</li>
+    <li>Beer 3</li>
+    <li>Beer 4</li>
+    <li>Beer 5</li>
+    <li>Beer 6</li>
+    <li>Beer 7</li>
+    <li>Beer 8</li>
+    <li>Beer 9</li>
+    <li>Beer 10</li>
+  </ul>
 
 <script type="text/javascript" src="mainScript.js"></script>
 
