--- a/index.html
+++ b/index.html
@@ -22,18 +22,16 @@
     <header> 
       <div class="head">
         <ul>
-          <li>Home</li>
-          <li>Landing page</li>
-          <li>Beer info page</li>
-          <li>Search</li>
+          <li>HOME</li>
+          <li>LANGDING PAGE</li>
+          <li>BEER INFO</li>
+          <li>SEARCH</li>
         </ul>
       <div class="search">
         <input class="search-beer-input">
         <button type="submit"><i class="fa fa-search"></i></button>
       </div>
       </div>
-      
-      <h1>Let´t have a drink</h1>
     </header>
 
     <main class="container">
