--- a/searchPage.html
+++ b/searchPage.html
@@ -52,22 +52,14 @@
       <p class="hops"></p>
       <p class="food-pairing"></p>
       <p class="brewers-tips"></p>
-      <input class="search-beer-input">
     </footer>
   </div>
 
+  <input class="search-beer-input">
   <ul class="beer-list">
-    <li>Beer 1</li>
-    <li>Beer 2</li>
-    <li>Beer 3</li>
-    <li>Beer 4</li>
-    <li>Beer 5</li>
-    <li>Beer 6</li>
-    <li>Beer 7</li>
-    <li>Beer 8</li>
-    <li>Beer 9</li>
-    <li>Beer 10</li>
   </ul>
+  <button class="button-minus">Minus -</button>
+  <button class="button-plus">Plus +</button>
 
 <script type="text/javascript" src="mainScript.js"></script>
 
