List search styling

--- a/searchPage.html
+++ b/searchPage.html
@@ -55,11 +55,15 @@
     </footer>
   </div>
 
-  <input class="search-beer-input">
-  <ul class="beer-list">
-  </ul>
-  <button class="button-minus">Minus -</button>
-  <button class="button-plus">Plus +</button>
+  <div class="wrap">
+    <div class="search">
+        <button class="button-minus search-button">Previous</button>
+       <input type="text" class="search-beer-input" placeholder="Search for beer">
+       <button type="submit" class="button-plus search-button">Next</button>
+    </div>
+    <ul class="beer-list"></ul>
+ </div>
+
 
 <script type="text/javascript" src="mainScript.js"></script>
 
