--- a/searchPage.html
+++ b/searchPage.html
@@ -18,10 +18,8 @@
 
 <body>
   <div class="wrapper">
-    <header class="head"> 
-    </header>
 
-    <main class="container">
+    <header class="container">
       <div class="margin">
 
        <div class="card-wrapper">
@@ -39,10 +37,9 @@
     </div> 
 
       </div>
+    </header>
 
-    </main>
-
-    <footer class="beer-info">
+    <main class="beer-info">
       <img class="beer-img-info" src="" alt="">
       <p class="beer-name-info"></p>
       <p class="description"></p>
@@ -52,17 +49,17 @@
       <p class="hops"></p>
       <p class="food-pairing"></p>
       <p class="brewers-tips"></p>
-    </footer>
+    </main>
   </div>
 
-  <div class="wrap">
+  <footer class="wrap">
     <div class="search">
         <button class="button-minus search-button">Previous</button>
        <input type="text" class="search-beer-input" placeholder="Search for beer">
        <button type="submit" class="button-plus search-button">Next</button>
     </div>
     <ul class="beer-list"></ul>
- </div>
+ </footer>
 
 
 <script type="text/javascript" src="mainScript.js"></script>
