--- a/index.html
+++ b/index.html
@@ -20,18 +20,6 @@
 <body>
   <div class="wrapper">
     <header> 
-      <div class="head">
-        <ul>
-          <li>HOME</li>
-          <li>LANGDING PAGE</li>
-          <li>BEER INFO</li>
-          <li>SEARCH</li>
-        </ul>
-      <div class="search">
-        <input class="search-beer-input">
-        <button type="submit"><i class="fa fa-search"></i></button>
-      </div>
-      </div>
     </header>
 
     <main class="container">
@@ -57,13 +45,22 @@
         <p class="ingredients"></p>
         <p class="hops"></p>
         <p class="food-pairing"></p>
-        <p class="brewers tips"></p>
+        <p class="brewers-tips"></p>
       </div>
+      <div class="img-wrapper">
       <img class="beer-img-info" src="" alt="">
+      </div>
     </footer>
-  </div>
 
-    
+  <div class="wrap">
+    <div class="search">
+        <button class="button-minus search-button">Previous</button>
+       <input type="text" class="search-beer-input" placeholder="Search for beer">
+       <button type="submit" class="button-plus search-button">Next</button>
+    </div>
+    <ul class="beer-list"></ul>
+ </div>
+</div>
 
 <script type="text/javascript" src="mainScript.js"></script>
 
