--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <p class="ingredients"></p>
         <p class="hops"></p>
         <p class="food-pairing"></p>
-        <p class="brewers tips"></p>
+        <p class="brewers-tips"></p>
       </div>
       <img class="beer-img-info" src="" alt="">
     </footer>
